local-dev-kubernetes/minikube-rotor.yaml
# Rotor for the local envoy
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rotor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: rotor
    spec:
      serviceAccountName: rotor
      containers:
      - image: turbinelabs/rotor:0.18.2
        imagePullPolicy: Always
        name: rotor
        ports:
          - containerPort: 50000 # xDS server is exposed here
        env:
        - name: ROTOR_CMD
          value: xds-only
        - name: ROTOR_API_ZONE_NAME
          value: dev-local
        - name: ROTOR_API_KEY
          valueFrom:
            secretKeyRef:
              name: tbnsecret
              key: apikey
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: rotor
  name: rotor
spec:
  ports:
  - port: 50000
    protocol: TCP
    targetPort: 50000
  selector:
    run: rotor
  type: ClusterIP
